syntax = "proto3";
package cn.rapidtsdb.tsdb.model.proto;

message ProtoAuthParams  {
  string key = 1;
  string value = 2;
}


message ProtoAuthMessage {
  int32 authVersion = 1;
  string authType = 2;
  string ext = 4;
  repeated ProtoAuthParams authParams = 5;
  int32 reqId = 6;
}

message ProtoAuthResp {
  int64 authCode = 1;
  string msg = 2;
  int32 permissions = 3;
  int32 reqId = 4;
}
