syntax = "proto3";
package cn.rapidtsdb.tsdb.model.proto;


message ProtoConnectionConfig {
    string protocolVersion = 1;
    string clientInfo = 2;
}