syntax = "proto3";
package cn.rapidtsdb.tsdb.model.proto;

message ProtoCommonResponse {
  int32 code = 1;
  string msg = 2;
  int32 reqId = 3;
  bool exception = 4;
}


message ProtoDataResponse {
  string aggregator = 1;
  string downsampler = 2;
  map<int64, double> dps = 3;
  int32 reqId = 4;
  string metric = 5;
  repeated string aggregatedTags = 6;
  map<string, string> tags = 7;
  ProtoDataQueryStat info =8;
}

message ProtoDataQueryStat {
  int64 costMs = 1;
  int32 scannedDpsNumber = 2;
  int32 dpsNumber = 3;
}