syntax = "proto3";
package cn.rapidtsdb.tsdb.model.proto;


message ProtoDatapoint {
    int64 timestamp = 1;
    double val = 2;
}


message ProtoTSTag {
    string key = 1;
    string value = 2;
}

message ProtoDatapoints {
    string metric = 1;
    repeated ProtoDatapoint dps = 2;
    repeated ProtoTSTag tags = 3;
}


